--- a/app/src/main/res/layout/queue_request_item.xml
+++ b/app/src/main/res/layout/queue_request_item.xml
@@ -16,7 +16,7 @@
         android:textSize="15dip"
         android:textStyle="bold"/>
 
-    <!-- Artist Name -->
+    <!-- Location -->
     <TextView
         android:id="@+id/location"
         android:layout_width="fill_parent"
@@ -27,7 +27,7 @@
         android:layout_marginTop="1dip"
         android:text="Location" />
 
-    <!-- Rightend Duration -->
+    <!-- Timestamp -->
     <TextView
         android:id="@+id/timestamp"
         android:layout_width="wrap_content"
